# SafeClaw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  MVP_PROGRESS.md  PUSH_LOG.md  README.md  STATUS.md  safeclaw.cmd  safeclaw.ps1  开发计划.md
safeclaw-sqlite/: Cargo.toml
safeclaw-sqlite/examples/: full_lifecycle_demo.rs  orchestrator_scope_read_fanout_demo.rs  orchestrator_scope_write_serial_under_reads_demo.rs  orchestrator_scope_write_under_reads_demo.rs  safeclaw_mvp_entry.rs  worker_loop_batch_conflict_demo.rs  worker_loop_batch_demo.rs  worker_loop_batch_failure_demo.rs  worker_loop_batch_release_demo.rs  worker_loop_demo.rs  worker_loop_dispatch_batch_demo.rs  worker_loop_dispatch_demo.rs  worker_loop_empty_queue_demo.rs  worker_loop_network_demo.rs  worker_loop_persisted_probe_demo.rs  worker_loop_read_fanout_demo.rs  worker_loop_renew_demo.rs  worker_loop_resume_conflict_demo.rs  worker_loop_resume_demo.rs  worker_loop_resume_missing_runtime_demo.rs  worker_loop_resume_release_demo.rs  worker_loop_retry_conflict_demo.rs  worker_loop_retry_demo.rs  worker_loop_retry_missing_runtime_demo.rs  worker_loop_retry_pre_exec_spawn_demo.rs  worker_loop_retry_release_demo.rs  worker_loop_scope_conflict_demo.rs  worker_loop_scope_read_demo.rs  worker_loop_write_serial_under_reads_demo.rs  worker_loop_write_under_reads_demo.rs  worker_service_governance_demo.rs
safeclaw-sqlite/src/: connection.rs  effect_store.rs  error.rs  heartbeat.rs  integration.rs  lib.rs  migrations.rs  orchestrator.rs  probe_executor.rs  runtime_store.rs  sandbox_executor.rs  (+3 more)
(+554 files in other folders)
