[package]
name = "safeclaw-sqlite"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false
description = "SafeClaw SQLite WAL adapter crate"

[lib]
name = "safeclaw_sqlite"
path = "src/lib.rs"

[dependencies]
safeclaw-core = { path = "../safeclaw-core" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
